@@ -76,7 +76,7 @@ public class SynchList {
 		new KThread(new PingTest(ping, pong)).setName("ping").fork();
 
 		for (int i = 0; i < 10; i++) {
-			Integer o = new Integer(i);
+			Integer o = Integer.valueOf(i);
 			ping.add(o);
 			Lib.assertTrue(pong.removeFirst() == o);
 		}
